; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_varlena.c_varlenafastcmp_locale.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_varlena.c_varlenafastcmp_locale.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i64, i32)* @varlenafastcmp_locale to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @varlenafastcmp_locale(i64 %0, i64 %1, i32 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  store i32 %2, i32* %6, align 4
  %14 = load i64, i64* %4, align 8
  %15 = call i32* @DatumGetVarStringPP(i64 %14)
  store i32* %15, i32** %7, align 8
  %16 = load i64, i64* %5, align 8
  %17 = call i32* @DatumGetVarStringPP(i64 %16)
  store i32* %17, i32** %8, align 8
  %18 = load i32*, i32** %7, align 8
  %19 = call i8* @VARDATA_ANY(i32* %18)
  store i8* %19, i8** %9, align 8
  %20 = load i32*, i32** %8, align 8
  %21 = call i8* @VARDATA_ANY(i32* %20)
  store i8* %21, i8** %10, align 8
  %22 = load i32*, i32** %7, align 8
  %23 = call i32 @VARSIZE_ANY_EXHDR(i32* %22)
  store i32 %23, i32* %11, align 4
  %24 = load i32*, i32** %8, align 8
  %25 = call i32 @VARSIZE_ANY_EXHDR(i32* %24)
  store i32 %25, i32* %12, align 4
  %26 = load i8*, i8** %9, align 8
  %27 = load i32, i32* %11, align 4
  %28 = load i8*, i8** %10, align 8
  %29 = load i32, i32* %12, align 4
  %30 = load i32, i32* %6, align 4
  %31 = call i32 @varstrfastcmp_locale(i8* %26, i32 %27, i8* %28, i32 %29, i32 %30)
  store i32 %31, i32* %13, align 4
  %32 = load i32*, i32** %7, align 8
  %33 = call i64 @PointerGetDatum(i32* %32)
  %34 = load i64, i64* %4, align 8
  %35 = icmp ne i64 %33, %34
  br i1 %35, label %36, label %39

36:                                               ; preds = %3
  %37 = load i32*, i32** %7, align 8
  %38 = call i32 @pfree(i32* %37)
  br label %39

39:                                               ; preds = %36, %3
  %40 = load i32*, i32** %8, align 8
  %41 = call i64 @PointerGetDatum(i32* %40)
  %42 = load i64, i64* %5, align 8
  %43 = icmp ne i64 %41, %42
  br i1 %43, label %44, label %47

44:                                               ; preds = %39
  %45 = load i32*, i32** %8, align 8
  %46 = call i32 @pfree(i32* %45)
  br label %47

47:                                               ; preds = %44, %39
  %48 = load i32, i32* %13, align 4
  ret i32 %48
}

declare dso_local i32* @DatumGetVarStringPP(i64) #1

declare dso_local i8* @VARDATA_ANY(i32*) #1

declare dso_local i32 @VARSIZE_ANY_EXHDR(i32*) #1

declare dso_local i32 @varstrfastcmp_locale(i8*, i32, i8*, i32, i32) #1

declare dso_local i64 @PointerGetDatum(i32*) #1

declare dso_local i32 @pfree(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
